[package]
name = "grovedbg"
authors = ["Evgeny Fomin <evgeny.fomin@dash.org>"]
version = "0.2.0"
description = "GroveDB inspection tool"
edition = "2021"

[dependencies]
eframe = "0.27.2"
grovedbg-grpc = { git = "https://github.com/dashpay/grovedb", branch = "grove-dbg" }
hex = "0.4.3"
strum = { version = "0.26.2", features = ["strum_macros", "derive"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
