[package]
name = "grovedbg"
authors = ["Evgeny Fomin <evgeny.fomin@dash.org>"]
version = "0.2.0"
description = "GroveDB inspection tool"
edition = "2021"

[dependencies]
eframe = "0.27.2"
grovedbg-types = { git = "https://github.com/dashpay/grovedb", branch = "grove-dbg" }
hex = "0.4.3"
reqwest = { version = "0.12.4", features = ["json"] }
strum = { version = "0.26.2", features = ["strum_macros", "derive"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "sync"] }
tracing-subscriber = "0.3.18"
